kubernetes/std/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: companies-house-microservice
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: companieshouse.labs.armakuni.co.uk
      http:
        paths:
          - backend:
              serviceName: companies-house-microservice
              servicePort: 80
